PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jul 2010, PHP 5.2.14

- Fixed bug #52238 (Crash when an Exception occured in iterator_to_array).
  (Johannes)

01 Jul 2010, PHP 5.2.14RC2
- Fixed a possible interruption array leak in strrchr(). Reported by
  Péter Veres. (CVE-2010-2484) (Felipe)
- Fixed a possible interruption array leak in strchr(), strstr(), substr(), 
  chunk_split(), strtok(), addcslashes(), str_repeat(), trim(). (Felipe)
- Fixed a possible memory corruption in substr_replace() (Dmitry)
- Fixed SplObjectStorage unserialization problems (CVE-2010-2225). (Stas)

- Fixed bug #52163 (SplFileObject::fgetss() fails due to parameter that can't
  be set). (Felipe)
- Fixed bug #52162 (custom request header variables with numbers are removed). 
  (Sriram Natarajan)
- Fixed bug #52160 (Invalid E_STRICT redefined constructor error). (Felipe)
- Fixed bug #52061 (memory_limit above 2G). (Felipe)
- Fixed bug #52010 (open_basedir restrictions mismatch on vacuum command).
  (Ilia, Felipe)
- Fixed bug #49730 (Firebird - new PDO() returns NULL). (Felipe)
- Fixed bug #33210 (getimagesize() fails to detect width/height on certain 
  JPEGs). (Ilia)

17 Jun 2010, PHP 5.2.14RC1
- Upgraded bundled PCRE to version 8.02. (Ilia)

- Reverted bug fix #49521 (PDO fetchObject sets values before calling
  constructor). (Felipe)

- Updated timezone database to version 2010.5. (Derick)

- Fixed a possible stack exaustion inside fnmatch(). Reporeted by Stefan
  Esser (Ilia)
- Reset error state in PDO::beginTransaction() reset error state. (Ilia)
- Fixed a NULL pointer dereference when processing invalid XML-RPC
  requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)
- Fixed handling of session variable serialization on certain prefix
  characters. Reported by Stefan Esser (Ilia)
- Fixed a possible arbitrary memory access inside sqlite extension. Reported